[package]
name = "aoc-2023"
version = "0.1.0"
edition = "2021"
authors = ["BRAVO688WEB <hi@b68.dev>"]
default-run = "aoc-2023"

[dependencies]
itertools = "0.12.0"
num = "0.4.1"
pathfinding = "4.4.0"
rayon = "1.8.0"

[profile.release]
lto = "fat"
codegen-units = 1

[[bin]]
name = "day01"
path = "src/d1.rs"

[[bin]]
name = "day02"
path = "src/d2.rs"

[[bin]]
name = "day03"
path = "src/d3.rs"

[[bin]]
name = "day04"
path = "src/d4.rs"

[[bin]]
name = "day05"
path = "src/d5.rs"


[[bin]]
name = "day06"
path = "src/d6.rs"

[[bin]]
name = "day07"
path = "src/d7.rs"

[[bin]]
name = "day08"
path = "src/d8.rs"

[[bin]]
name = "day09"
path = "src/d9.rs"

[[bin]]
name = "day10"
path = "src/d10.rs"

[[bin]]
name = "day11"
path = "src/d11.rs"

[[bin]]
name = "day12"
path = "src/d12.rs"